# agent-council-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_council/: __init__.py  audit.py  cli.py  memory.py  workers.py
demo/: agents.yaml  mock_agent.py  render_demo_gif.py
examples/: agents.yaml
sessions/: 2026-05-05-agent-council-cli-wrap-up.md
tests/: test_cli.py
